--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.14",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
